--- a/supervisor.conf
+++ b/supervisor.conf
@@ -1,4 +1,4 @@
-; This is a supervisor config file to run CoWin Assist Bot
+; This is a supervisor config file to run Covid19 Assist Bot
 ;
 ; Rename this file to `cowinassist.conf` and place it supervisor configs
 ; directory, usually at /etc/supervisor/conf.d/
