Update docker image in compose example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     # build:
     #   context: .
     #   dockerfile: ./support/docker/production/Dockerfile.buster
-    image: karambir/covid19-assist:v0.1
+    image: karambir/covid19-assist:version-0.2
     env_file:
       - .env
 
